AVISIMPL-338 Calendar view for batch: Added tree filtering and date selection.

--- a/src/main/web/statistics/xmltree/xmltree.css
+++ b/src/main/web/statistics/xmltree/xmltree.css
@@ -17,3 +17,4 @@
 .xmltree .plusMin:hover { border-color: #fa8; background: #fff7da; }
 .xmltree .noKids .plusMin { display: none; }
 .xmltree.subTreeRequestsOnAllNodes .plusMin, .xmltree .subTreeNode .plusMin { display: block; }
+.highlight { background-color: #484 }
